# ngot-aiml-sprint

./: .editorconfig  .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
agent-systems/: pyproject.toml  test_agent.py
agent-systems/app/: agent.py  main.py  shopper_tools.py
agent-systems/app/tools/: search_tools.py
agent-systems/scripts/: agent_with_memory.py  custom_tools_demo.py  first_agent.py  tavily_demo.py  tavily_langchain_tool.py
agent-systems/tests/: trial.py
biohealth-finetune/: pyproject.toml
biohealth-finetune/scripts/: bnb_config_demo.py  chain_of_thought_demo.py  format_dataset.py  inference.py  load_dataset.py  load_model.py  lora_config_demo.py  openai_json_mode_demo.py  prompt_comparison.py  push_to_hub.py  pydantic_function_calling.py  train.py  tree_of_thought_demo.py
day-0/: ngot_exercise_1.py  ngot_exercise_2.py  ngot_exercise_3.py  ngot_exercise_4.py
day-1/: docker.md  docker_essentials.md  pydantic_intro.py  pydantic_schemas.py  test_schemas.py  validator.py
day-2/: openai-api.py
eta-predictor/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  dvc.yaml  models.dvc  pyproject.toml  run.py  train.py  try.py
eta-predictor/.dvc/: config
eta-predictor/app/: main.py  predictor.py  schemas.py
eta-predictor/data/: raw.dvc
eta-predictor/data/processed/: train.csv  val.csv
eta-predictor/eta_predictor/: __init__.py  api.py  main.py  predictor.py  schemas.py
eta-predictor/scripts/: first_mlflow_run.py  generate_data.py  preprocess.py  train.py
eta-predictor/tests/: test_api.py  test_schemas.py
medical-literature-rag/: pyproject.toml  run.py
medical-literature-rag/app/: main.py  rag_engine.py  schemas.py
medical-literature-rag/data/medical/: malaria_guidelines.txt
medical-literature-rag/logs/: script_logs.txt  server_logs.txt
medical-literature-rag/scripts/: create_knowledge_base.py  evaluate.py  ingest.py
medical-literature-rag/tests/: test_rag.py
product-recommender/: README.md  pyproject.toml  run.py
product-recommender/app/: main.py  recommender.py  schemas.py
product-recommender/logs/: script_logs.txt  server_logs.txt
product-recommender/scripts/: create_catalogue.py  index_products.py
product-recommender/tests/: rec_api.py  test_recommender.py
rag-system/: logs.txt  pyproject.toml
rag-system/data/medical/: diabetes.txt  hypertension.txt  malaria.txt
rag-system/scripts/: basic_rag.py  chunking_demo.py  embeddings_demo.py  hybrid_search_demo.py  nvidia_openai.py  openai_api_demo.py  pinecone_setup.py  reranking_demo.py
telecomm-api/: pyproject.toml  run.py
telecomm-api/app/: llm_service.py  main.py  schemas.py
telecomm-api/tests/: test_api.py
